--- a/src/common/reset.css
+++ b/src/common/reset.css
@@ -9,7 +9,7 @@
     z-index: auto;
 }
 .hasNav{
-    padding-top:1rem;
+    margin-top:1rem;
 }
 .yd-cell-item {
     background: #fff;
@@ -20,6 +20,9 @@
 }
 .mt-10{
     margin-top: 0.2rem;
+}
+.ml-10{
+    margin-left: 0.2rem;
 }
 .ml-40{
     margin-left: 0.4rem;
